Add chat websocket support
